--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="attribution" role="contentinfo">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://www.frontendmentor.io/profile/Rei">Rei</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/Reshe">Reshe</a>.
     </div>
   </body>
 </html>
